Admin - Teacher - Student
All Operations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,12 @@
     "cSpell.ignoreWords": [
         "UERPS",
         "allauth",
-        "lika"
+        "attendanceclass",
+        "endcomment",
+        "endfor",
+        "forloop",
+        "lika",
+        "newwindow",
+        "onclick"
     ]
 }
