Teacher and Student Timetable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "allauth",
         "attendanceclass",
         "collectstatic",
+        "elif",
         "endcomment",
         "endfor",
         "forloop",
