--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "UERPS",
         "aditi",
         "allauth",
+        "assigntime",
         "attendanceclass",
         "collectstatic",
         "elif",
