Email and Password
Email Configurations and Password Reset

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "assigntime",
         "attendanceclass",
         "collectstatic",
+        "dotenv",
         "elif",
         "endcomment",
         "endfor",
